AI 系统核心升级 后端 (WebNet) 功能增强  前端 (Web) UI 与逻辑适配 预设数据同步